--- a/games/broth-invaders.html
+++ b/games/broth-invaders.html
@@ -14,12 +14,13 @@
         align-items: center;
         height: 100vh; /* Full viewport height */
     }
-    canvas {
-        border: 1px solid #00ff00;
-        width: 100%;
-        max-width: 800px; /* Match your game’s default width */
-        height: auto; /* Scale height proportionally */
-        max-height: 100vh; /* Prevent overflow */
+  canvas {
+    border: 1px solid #00ff00;
+    width: 100%;
+    max-width: 800px;
+    height: auto;
+    max-height: 600px;
+}
     }
     .back-link {
         color: #00ff00;
