--- a/games/broth-invaders.html
+++ b/games/broth-invaders.html
@@ -19,7 +19,7 @@
         width: 100%;
         max-width: 800px; /* Match your game’s default width */
         height: auto; /* Scale height proportionally */
-        max-height: 100vh; /* Prevent overflow */
+        max-height: 600px; /* Prevent overflow */
     }
     .back-link {
         color: #00ff00;
