--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <!-- Header area -->
         <header id="header">
             <div class="center text-center">
-                <h1 class="bigheadline">Barton Base</h1>
-                <h4 class="subheadline">Your Web3 Entertainment Hub</h4>
+                <h1 class="bigheadline">Fishnu's Arcade</h1>
+                <h4 class="subheadline">Cod's Entertainment Hub</h4>
             </div>
             <div class="bottom">
                 <a data-scroll href="#navigation" class="scrollDown animated pulse" id="scrollToContent"><i class="pe-7s-angle-down-circle pe-va"></i></a>
@@ -50,7 +50,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-6">
-                        <div class="logo"><a data-scroll href="#body" class="logo-text">Barton Base</a></div>
+                        <div class="logo"><a data-scroll href="#body" class="logo-text">Smoking Chicken Fish</a></div>
                     </div>
                     <div class="col-xs-6">
                         <div class="nav">
@@ -184,10 +184,12 @@
 
         <section id="about">
             <div class="container">
-                <h2 class="block_title">About Barton Base</h2>
+                <h2 class="block_title">About Smoking Chicken Fish</h2>
                 <div class="row">
                     <div class="col-xs-12">
-                        <p>Welcome to Barton Base, your hub for Web3 Entertainment! I’m Barton and I love memecoins, I am a passionate web3 Degenerate with a love for crypto and I aim to bring nostalgic joy to degens worldwide. Follow my journey as I expand BBGames with more excitement!</p>
+                        <p>Blending satire with blockchain innovation, this legally registered church worships Lord Fishnu and follows the 10 Chickenmandments. Beyond the absurdity, SCF empowers token holders to govern its direction, and better the lives of their holders
+
+/p>
                         <img src="assets/images/bartonbase.jpg" alt="Barton Base"> <!-- Replace with your image or remove if not available -->
                     </div>
                 </div>
