--- a/games/broth-invaders.html
+++ b/games/broth-invaders.html
@@ -9,27 +9,44 @@
             margin: 0;
             padding: 0;
             background-color: #000;
-            font-family: 'Press Start 2P', cursive; /* Retro arcade font */
-            color: #0f0; /* Green text for consistency */
+            font-family: 'Press Start 2P', cursive;
+            color: #0f0;
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            overflow: hidden; /* Prevent scrollbars from affecting layout */
+            overflow: hidden;
         }
         canvas {
-            border: 1px solid #00ff00; /* Green border for retro style */
+            border: 1px solid #00ff00;
             width: 800px;
             height: 600px;
             max-width: 100%;
-            max-height: 100vh; /* Ensures it fits within viewport height */
-            object-fit: contain; /* Prevents distortion while maintaining aspect ratio */
-            display: block; /* Ensures no extra margins or padding */
+            max-height: 100vh;
+            object-fit: contain;
+            display: block;
+        }
+        #startButton {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 10px 20px;
+            font-family: 'Press Start 2P', cursive;
+            background-color: #00ff00;
+            color: #000;
+            border: 2px solid #00ff00;
+            cursor: pointer;
+            z-index: 10;
+        }
+        #startButton:hover {
+            background-color: #00cc00;
         }
     </style>
 </head>
 <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <button id="startButton">Start Game</button>
     <script src="broth-invaders.js"></script>
 </body>
 </html>
