--- a/games/broth-invaders.html
+++ b/games/broth-invaders.html
@@ -3,50 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Broth Invaders</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #000;
-            font-family: 'Press Start 2P', cursive;
-            color: #0f0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            overflow: hidden;
-        }
-        canvas {
-            border: 1px solid #00ff00;
-            width: 800px;
-            height: 600px;
-            max-width: 100%;
-            max-height: 100vh;
-            object-fit: contain;
-            display: block;
-        }
-        #startButton {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            padding: 10px 20px;
-            font-family: 'Press Start 2P', cursive;
-            background-color: #00ff00;
-            color: #000;
-            border: 2px solid #00ff00;
-            cursor: pointer;
-            z-index: 10;
-        }
-        #startButton:hover {
-            background-color: #00cc00;
-        }
-    </style>
+    <title>Broth Invaders - Barton Base Games</title>
+   <style>
+    body {
+        background-color: #121212;
+        margin: 0;
+        padding: 0; /* Remove padding to fill screen */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 100vh; /* Full viewport height */
+    }
+    canvas {
+        border: 1px solid #00ff00;
+        width: 100%;
+        max-width: 800px; /* Match your game’s default width */
+        height: auto; /* Scale height proportionally */
+        max-height: 100vh; /* Prevent overflow */
+    }
+    .back-link {
+        color: #00ff00;
+        text-decoration: none;
+        margin-top: 20px;
+        font-family: 'Arial', sans-serif;
+    }
+    .back-link:hover {
+        text-decoration: underline;
+    }
+</style>
 </head>
 <body>
-    <canvas id="gameCanvas" width="800" height="600"></canvas>
-    <button id="startButton">Start Game</button>
+    <canvas id="gameCanvas"></canvas>
+    <a href="../index.html" class="back-link">Back to BBGames</a>
     <script src="broth-invaders.js"></script>
 </body>
 </html>
