--- a/games/broth-invaders.html
+++ b/games/broth-invaders.html
@@ -4,33 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Broth Invaders - Barton Base Games</title>
-   <style>
-    body {
-        background-color: #121212;
-        margin: 0;
-        padding: 0; /* Remove padding to fill screen */
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        height: 100vh; /* Full viewport height */
-    }
-    canvas {
-        border: 1px solid #00ff00;
-        width: 100%;
-        max-width: 800px; /* Match your game’s default width */
-        height: auto; /* Scale height proportionally */
-        max-height: 100vh; /* Prevent overflow */
-    }
-    .back-link {
-        color: #00ff00;
-        text-decoration: none;
-        margin-top: 20px;
-        font-family: 'Arial', sans-serif;
-    }
-    .back-link:hover {
-        text-decoration: underline;
-    }
-</style>
+    <style>
+        body {
+            background-color: #121212;
+            margin: 0;
+            padding: 0; /* Remove padding to fill screen */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            height: 100vh; /* Full viewport height */
+        }
+        canvas {
+            border: 1px solid #00ff00;
+            width: 100%;
+            max-width: 800px; /* Match game’s default width */
+            height: auto; /* Scale height proportionally */
+            max-height: 100vh; /* Prevent overflow */
+            aspect-ratio: 4 / 3; /* Maintain 800x600 aspect ratio */
+        }
+        .back-link {
+            color: #00ff00;
+            text-decoration: none;
+            margin-top: 20px;
+            font-family: 'Arial', sans-serif;
+        }
+        .back-link:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
