--- a/games/broth-invaders.html
+++ b/games/broth-invaders.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
-    <a href="../index.html" class="back-link">Back to BBGames</a>
+    <a href="../index.html" class="back-link">Back to Fishnu's Arcade</a>
     <script src="broth-invaders.js"></script>
 </body>
 </html>
