--- a/games/broth-invaders.html
+++ b/games/broth-invaders.html
@@ -17,10 +17,9 @@
         canvas {
             border: 1px solid #00ff00;
             width: 100%;
-            max-width: 800px; /* Match game’s default width */
+            max-width: 800px; /* Match your game’s default width */
             height: auto; /* Scale height proportionally */
             max-height: 100vh; /* Prevent overflow */
-            aspect-ratio: 4 / 3; /* Maintain 800x600 aspect ratio */
         }
         .back-link {
             color: #00ff00;
@@ -35,7 +34,7 @@
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
-    <a href="../index.html" class="back-link">Back to Fishnu's Arcade</a>
+    <a href="../index.html" class="back-link">Back to BBGames</a>
     <script src="broth-invaders.js"></script>
 </body>
 </html>
