--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-6">
-                        <div class="logo"><a data-scroll href="#body" class="logo-text">Smoking Chicken Fish</a></div>
+                        <div class="logo"><a data-scroll href="#body" class="logo-text">BB.Games</a></div>
                     </div>
                     <div class="col-xs-6">
                         <div class="nav">
@@ -73,77 +73,77 @@
 
         <!-- Portfolio Area (Renamed to Games) -->
 
-        <section id="games" class="portfolio-area">
-            <div class="container">
-                <h2 class="block_title">Games</h2>
-                <div class="row port cs-style-3">
-                    <div class="col-md-4 col-sm-6 col-xs-12 item-space">
-                        <figure>
-                            <img src="assets/images/broth-invaders-preview.jpg" alt="Broth Invaders"> <!-- Replace with actual game image or placeholder -->
-                            <figcaption>
-                                <h3>Broth Invaders</h3>
-                                <span>Retro Arcade Shooter</span>
-                                <a href="games/broth-invaders.html" class="button">Play Now</a>
-                            </figcaption>
-                        </figure>
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-xs-12 item-space">
-                        <figure>
-                            <img src="assets/images/coming-soon.jpg" alt="Coming Soon"> <!-- Placeholder image -->
-                            <figcaption>
-                                <h3>Coming Soon</h3>
-                                <span>More games are on the way!</span>
-                                <a href="#" class="button" disabled>Coming Soon</a>
-                            </figcaption>
-                        </figure>
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-xs-12 item-space">
-                        <figure>
-                            <img src="assets/images/coming-soon.jpg" alt="Coming Soon"> <!-- Placeholder image -->
-                            <figcaption>
-                                <h3>Coming Soon</h3>
-                                <span>More games are on the way!</span>
-                                <a href="#" class="button" disabled>Coming Soon</a>
-                            </figcaption>
-                        </figure>
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-xs-12 item-space">
-                        <figure>
-                            <img src="assets/images/coming-soon.jpg" alt="Coming Soon"> <!-- Placeholder image -->
-                            <figcaption>
-                                <h3>Coming Soon</h3>
-                                <span>More games are on the way!</span>
-                                <a href="#" class="button" disabled>Coming Soon</a>
-                            </figcaption>
-                        </figure>
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-xs-12 item-space">
-                        <figure>
-                            <img src="assets/images/coming-soon.jpg" alt="Coming Soon"> <!-- Placeholder image -->
-                            <figcaption>
-                                <h3>Coming Soon</h3>
-                                <span>More games are on the way!</span>
-                                <a href="#" class="button" disabled>Coming Soon</a>
-                            </figcaption>
-                        </figure>
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-xs-12 item-space">
-                        <figure>
-                            <img src="assets/images/coming-soon.jpg" alt="Coming Soon"> <!-- Placeholder image -->
-                            <figcaption>
-                                <h3>Coming Soon</h3>
-                                <span>More games are on the way!</span>
-                                <a href="#" class="button" disabled>Coming Soon</a>
-                            </figcaption>
-                        </figure>
-                    </div>
-                    <div class="col-xs-12">
-                        <div class="btn-center"><a href="#" class="big button">View All</a></div>
-                    </div>
-                </div>
-            </div><!-- container -->
-        </section><!-- games -->
-
+      <!-- Games Section -->
+<section id="games" class="portfolio-area">
+    <div class="container">
+        <h2 class="block_title">Games</h2>
+        <div class="row port cs-style-3">
+            <div class="col-md-4 col-sm-6 col-xs-12 item-space">
+                <figure>
+                    <img src="assets/images/broth-invaders-preview.jpg" alt="Broth Invaders">
+                    <figcaption>
+                        <h3>Broth Invaders</h3>
+                        <span>Retro Arcade Shooter</span>
+                        <a href="games/broth-invaders.html" class="button">Play Now</a>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12 item-space">
+                <figure>
+                    <img src="assets/images/game-preview-2.jpg" alt="Space Blaster Preview">
+                    <figcaption>
+                        <h3>Space Blaster</h3>
+                        <span>Coming Soon</span>
+                        <button class="button play-music-btn" data-audio="music1">Play Theme</button>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12 item-space">
+                <figure>
+                    <img src="assets/images/game-preview-3.jpg" alt="Dungeon Quest Preview">
+                    <figcaption>
+                        <h3>Dungeon Quest</h3>
+                        <span>Coming Soon</span>
+                        <button class="button play-music-btn" data-audio="music2">Play Theme</button>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12 item-space">
+                <figure>
+                    <img src="assets/images/game-preview-4.jpg" alt="Retro Racer Preview">
+                    <figcaption>
+                        <h3>Retro Racer</h3>
+                        <span>Coming Soon</span>
+                        <button class="button play-music-btn" data-audio="music3">Play Theme</button>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12 item-space">
+                <figure>
+                    <img src="assets/images/coming-soon.jpg" alt="Coming Soon">
+                    <figcaption>
+                        <h3>Coming Soon</h3>
+                        <span>More games are on the way!</span>
+                        <a href="#" class="button" disabled>Coming Soon</a>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12 item-space">
+                <figure>
+                    <img src="assets/images/coming-soon.jpg" alt="Coming Soon">
+                    <figcaption>
+                        <h3>Coming Soon</h3>
+                        <span>More games are on the way!</span>
+                        <a href="#" class="button" disabled>Coming Soon</a>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-xs-12">
+                <div class="btn-center"><a href="#" class="big button">View All</a></div>
+            </div>
+        </div>
+    </div>
+</section>
         <!-- Testimonial Area -->
 
         <section id="testimonial" class="testimonial-area">
@@ -183,12 +183,10 @@
 
         <section id="about">
             <div class="container">
-                <h2 class="block_title">About Smoking Chicken Fish</h2>
+                <h2 class="block_title">About BB.Games</h2>
                 <div class="row">
                     <div class="col-xs-12">
-                        <p>Blending satire with blockchain innovation, this legally registered church worships Lord Fishnu and follows the 10 Chickenmandments. Beyond the absurdity, SCF empowers token holders to govern its direction, and better the lives of their holders
-
-<p>
+                        <p>Bringing memecoings to life with retrostyle games<p>
                         <img src="assets/images/bartonbase.jpg" alt="Barton Base"> <!-- Replace with your image or remove if not available -->
                     </div>
                 </div>
